# backend/routes/api.php
@@ -7,11 +7,13 @@ use App\Http\Controllers\TeacherController;
 use App\Http\Controllers\GradeController;
 use App\Http\Controllers\ReportController;
 use App\Http\Controllers\StudentController;
+use App\Http\Controllers\GroupController;
 
 Route::post('/login', [AuthController::class, 'login'])->name('login');
 
 Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
 Route::get('/check-token', [AuthController::class, 'checkToken'])->middleware('auth:sanctum');
+Route::get('/groups', [GroupController::class, 'index']);
 
 // Маршруты доступные только преподавателям
 Route::middleware(['auth:sanctum', 'ability:teacher'])->group(function () {
